--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
       color:var(--ink);
       background: radial-gradient(circle at top, var(--bg1), var(--bg2));
-      display:flex; align-items:center; justify-content:center;
+      display:flex;
+      align-items:center;
+      justify-content:center;
       padding:18px;
     }
 
@@ -29,7 +31,7 @@
       background:#ffffffcc;
       border:1px solid #ffd1dc;
       border-radius:20px;
-      box-shadow: 0 12px 40px rgba(0,0,0,.10);
+      box-shadow:0 12px 40px rgba(0,0,0,.10);
       overflow:hidden;
       backdrop-filter: blur(6px);
     }
@@ -69,8 +71,10 @@
       box-shadow:0 10px 24px rgba(0,0,0,.08);
     }
     .frame img{
-      position:absolute; inset:0;
-      width:100%; height:100%;
+      position:absolute;
+      inset:0;
+      width:100%;
+      height:100%;
       object-fit:cover;
       opacity:0;
       transition:opacity .8s ease;
@@ -84,7 +88,8 @@
       margin-top:12px;
     }
     .dot{
-      width:9px; height:9px;
+      width:9px;
+      height:9px;
       border-radius:50%;
       background:#ffd1dc;
       border:1px solid #ffb3c1;
@@ -94,10 +99,10 @@
     .panel{
       padding:14px;
       border-top:1px solid #ffe0e8;
+      text-align:center;
     }
 
     .question{
-      text-align:center;
       font-size:20px;
       margin-bottom:10px;
     }
@@ -203,9 +208,9 @@
     <div class="grid">
       <section class="photos">
         <div class="frame">
-          <img src="us1.jpg" class="active">
-          <img src="us2.jpg">
-          <img src="us3.jpg">
+          <img src="us1.jpg.PNG" class="active">
+          <img src="us2.jpg.PNG">
+          <img src="us3.jpg.PNG">
         </div>
         <div class="dots" id="dots"></div>
       </section>
@@ -230,7 +235,7 @@
   </div>
 
   <script>
-    const phone = "+61423137666"; // 🔴 PUT YOUR PHONE NUMBER HERE
+    const phone = "+61423137666"; // ✅ your number (international format)
 
     function openText(msg){
       window.location.href =
@@ -266,4 +271,3 @@
   </script>
 </body>
 </html>
-
